# mcp-getgather

./: .env.template  .envrc  .gitignore  .jwmrc  .prettierrc  Dockerfile  README.md  application_flow_diagram.md  blocklists-basic.txt  components.json  diagram.md  docker-compose.yml  entrypoint.sh  eslint.config.js  extract_openapi.py  flake.nix  getgather.py  main.py  package-lock.json  package.json  plan.md  plan_2.md  plan_3.md  proxies.example.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  rrweb-architecture.md  test  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: api-auth-tests.yml  api-signin-tests.yml  container.yml  deploy-dokku.yml  deploy-getgather-all.yml  deploy-getgather-dev-tailscale.yml  distill-tests.yml  mcp-tests.yml  publish.yml  static-analysis.yml  unit-tests.yml  webui-tests.yml
.husky/: pre-push
docs/: deploy_dokku.md  deploy_fly.md  deploy_railway.md  local-development.md
frontend/: index.html
frontend/__generated__/: api.d.ts
frontend/src/: config.ts  main.tsx
getgather/: __init__.py  actions.py  activity.py  analytics.py  auth_flow.py  auth_orchestrator.py  brand_state.py  config.py  context.py  database.py  db.py  detect.py  distill.py  element.py  extract_orchestrator.py  flow.py  flow_state.py  hosted_link_manager.py  logs.py  main.py  parse.py  rrweb.py  selector.py  sentry.py  signin_flow.py  signin_orchestrator.py  startup.py  yaml_utils.py  zen_actions.py  zen_distill.py
getgather/api/: api.py  main.py  types.py
getgather/browser/: agent.py  blocker.py  blocklist.py  freezable_model.py  page_provider.py  profile.py  proxy.py  proxy_builder.py  proxy_loader.py  proxy_types.py  resource_blocker.py  session.py  session_cleanup.py
getgather/connectors/: spec_loader.py  spec_models.py
getgather/database/: connection.py  migrate.py  models.py  schema.sql  seeder.py
getgather/frontend/: link.html  live.html  start.html
getgather/mcp/: activity.py  adidas.py  agent.py  agoda.py  alfagift.py  aliexpress.py  alltrails.py  amain.py  amazon.py  amazon_zen.py  amazonca.py  amazonca_zen.py  americanairlines.py  ashley.py  astro.py  audible.py  auth.py  auto_import.py  bbc.py  bedbathandbeyond.py  booking.py  brand_state.py  browser.py  calendar_utils.py  chewy.py  cnn.py  connection_manager.py  containerstore.py  costco.py  delta.py  doordash.py  dpage.py  ebay.py  ebird.py  espn.py  expedia.py  garmin.py  gofood.py  goodreads.py  google.py  (+42 more)
mcp/: main.py  mcp-getgather.sh  readme.md
scripts/: extract_openapi.py
tests/: conftest.py  test_acme_rrweb_auth.py  test_activity_manager.py  test_brand_state_manager.py  test_database_manager.py  test_distill_locate.py  test_selector.py
(+605 files in other folders)
