[project]
name = "getgather"
version = "0.1.0"
description = "Free your data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "pydantic>=2.11.3",
  "pydantic-settings>=2.9.1",
  "rich>=14.0.0",
  "fastapi>=0.115.12",
  "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
  "pyright>=1.1.399",
  "ruff>=0.11.6",
]

[tool.ruff]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/.venv",
  "**/venv",
  "**/htmlcov",
  "**/alembic/versions",
  "**/node_modules",
  "**/*env/*",
  "**/.git",
  "**/*.yaml",
  "**/*.yml",
]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["UP045", "UP006", "UP007"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["getgather", "tests"]